Se crean los html

--- a/src/main/resources/templates/crear_inmueble.html
+++ b/src/main/resources/templates/crear_inmueble.html
@@ -15,7 +15,7 @@
 <div th:if="${error != null}" class="error-message">
     <p th:text="${error}"></p>
 </div>
-    <form action="/equipos/nuevo" method="post">
+    <form action="/inmuebles/nuevo" method="post">
         <label for="ciudad">Ciudad:</label><br>
         <input type="text" id="ciudad" name="ciudad" required><br>
         <label for="barrio">Barrio:</label><br>
