Se corrigen errores y se sube inmueble y propietario

--- a/src/main/resources/templates/propietario.html
+++ b/src/main/resources/templates/propietario.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Lista de Propietarios</h1>
-<a href="/propietarios/nuevo">Crear Nuevo Propietario</a>
+<a href="/propietarios/nuevos">Crear Nuevo Propietario</a>
 <table>
     <tr>
         <th>Nombre</th>
