Se corrigen errores y se sube inmueble y propietario

--- a/src/main/resources/templates/crear_propietarios.html
+++ b/src/main/resources/templates/crear_propietarios.html
@@ -20,7 +20,7 @@
     <label for="inmueble">Inmueble:</label><br>
     <input type="text" id="inmueble" name="inmueble" required><br>
 
-    <button type="submit">Registar</button>
+    <button type="submit">Crear</button>
 </form>
 </body>
 </html>
