--- a/src/main/resources/templates/inmuebles.html
+++ b/src/main/resources/templates/inmuebles.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Lista de Inmuebles</h1>
-<a href="/inmuebles/nuevo">Crear Nuevo Inmueble</a>
+<a href="/inmuebles/nuevos">Crear Nuevo Inmueble</a>
 <table>
     <tr>
         <th>Ciudad</th>
