--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
 
                 <div class="inputBox">
 
-                        <input type="text" id="correo" name="correo" th:field="*{correo}" required> <i>Correo</i>
+                        <input type="text" id="correo" name="correo" th:field="*{correo}" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Ingrese un correo electrónico válido"> <i>Correo</i>
 
                     </div>
 
@@ -37,7 +37,7 @@
 
                     <div class="inputBox">
 
-                        <input type="password" id="clave" name="clave" th:field="*{clave}" required> <i>Clave</i>
+                        <input type="password" id="clave" name="clave" th:field="*{contrasena}" required> <i>Clave</i>
 
                     </div>
 
@@ -71,22 +71,25 @@
         $('form').submit(function(e) {
             e.preventDefault();
             var formData = $(this).serialize();
-
             $.ajax({
                 url: '/login',
                 type: 'POST',
                 data: formData,
                 success: function(result) {
-                    if (result === 'success') {
+                    if (result === 'cliente') {
                         alert('Ingreso exitoso');
-                        window.location.href = '/';
-                    } else {
-                        alert('Correo o contraseña inválidos');
+                        window.location.href = '/cliente';
+                    } else if (result === 'propietario') {
+                        alert('Ingreso exitoso');
+                        window.location.href = '/propietario';
+                    } else if (result === 'funcionario') {
+                        alert('Ingreso exitoso');
+                        window.location.href = '/funcionario';
                     }
                 },
                 error: function(err) {
                     console.error('Error al enviar la solicitud:', err);
-                    alert('Ocurrió un error. Por favor, inténtalo de nuevo más tarde.');
+                    alert('Ocurrió un error con el acceso. Por favor, inténtalo de nuevo más tarde.');
                 }
             });
         });
