--- a/src/main/resources/templates/registrarse.html
+++ b/src/main/resources/templates/registrarse.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="input-group">
                         <label for="celular">Celular</label>
-                        <input type="number" id="celular" name="celular" required>
+                        <input type="tel" id="celular" name="celular" required>
                     </div>
                     <button type="submit" class="btn">Registrarse</button>
                 </div>
