--- a/src/main/resources/templates/propietario.html
+++ b/src/main/resources/templates/propietario.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Propietario</title>
+    <link rel="stylesheet" href="/css/styleTable.css">
 </head>
 <body>
-    <h1>Hola desde propietario</h1>
+<div class="container">
+    <h1>Hola, <span th:text="${propietario.nombre}"></span></h1>
+    <h2>Bienvenido propietario</h2>
+    <table class="styled-table">
+        <thead>
+        <tr>
+            <th>Ciudad</th>
+            <th>Barrio</th>
+            <th>Avaluo</th>
+            <th>Direccion</th>
+            <th>Aprobado</th>
+            <th>Detalles</th>
+        </tr>
+        </thead>
+        <tbody>
+        <th:block th:if="${#lists.isEmpty(inmuebles)}">
+            <tr>
+                <td colspan="6">No hay inmuebles asociados</td>
+            </tr>
+        </th:block>
+        <th:block th:each="inmueble : ${inmuebles}">
+            <tr>
+                <td th:text="${inmueble.ciudad}"></td>
+                <td th:text="${inmueble.barrio}"></td>
+                <td th:text="${inmueble.avaluo}"></td>
+                <td th:text="${inmueble.direccion}"></td>
+                <td th:text="${inmueble.aprobado} ? 'Si' : 'No'"></td>
+                <td><button class="details-btn">Ver detalles</button></td>
+            </tr>
+        </th:block>
+        </tbody>
+    </table>
+    <form id="salir-form" th:action="@{/logout}" method="post">
+        <button type="submit">Cerrar sesión</button>
+    </form>
+    <form action="/propietario/agregarInmueble" method="get">
+        <button type="submit">Agregar Inmueble</button>
+    </form>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $('#salir-form').submit(function(e) {
+            e.preventDefault();
+            var formData = $(this).serialize();
+            $.ajax({
+                url: '/logout',
+                type: 'POST',
+                data: formData,
+                success: function(result) {
+                    if (result === 'exitoso') {
+                        alert('Cierre de sesión exitoso');
+                        window.location.href = '/';
+                    }
+                },
+                error: function(err) {
+                    console.error('Error al enviar la solicitud:', err);
+                    alert('Ocurrió un error con el acceso. Por favor, inténtalo de nuevo más tarde.');
+                }
+            });
+        });
+
+        $('.details-btn').click(function() {
+
+        });
+    });
+</script>
+
 </body>
 </html>
