Se corrigen errores de ejecución y se crean nuevas funiones

--- a/src/main/resources/static/css/styleAgregarInmueble.css
+++ b/src/main/resources/static/css/styleAgregarInmueble.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
-    background-image: url('https://clipinmobiliario.com/assets/images/nosotros/casa.jpg');
+    background-image: url('https://images.adsttc.com/media/images/5263/0727/e8e4/4ee8/e100/0147/large_jpg/TUM_Arquidecture_Casa_Kopch%C3%A9_05.jpg?1382221600');
     background-size: cover;
     background-position: center;
     margin: 0;
@@ -35,6 +35,9 @@ label {
 
 input[type="text"],
 input[type="number"],
+input[type="email"],
+input[type="password"],
+input[type="tel"],
 textarea,
 select {
     width: 100%;
