--- a/src/main/resources/templates/agregarInmueble.html
+++ b/src/main/resources/templates/agregarInmueble.html
@@ -29,31 +29,34 @@
             <label for="descripcion">Descripción:</label>
             <textarea id="descripcion" name="descripcion" rows="4" required></textarea>
         </div>
-        <div class="form-group">
-            <label for="fotoHabitacion">Foto Habitación:</label>
-            <input type="file" id="fotoHabitacion" name="fotoHabitacion" accept="image/*" required>
-        </div>
-        <div class="form-group">
-            <label for="fotoBano">Foto Baño:</label>
-            <input type="file" id="fotoBano" name="fotoBano" accept="image/*" required>
-        </div>
-        <div class="form-group">
-            <label for="fotoFrente">Foto Frente:</label>
-            <input type="file" id="fotoFrente" name="fotoFrente" accept="image/*" required>
-        </div>
-        <div class="form-group">
-            <label for="fotoInterior">Foto Interior:</label>
-            <input type="file" id="fotoInterior" name="fotoInterior" accept="image/*" required>
-        </div>
-        <div class="form-group">
-            <label for="fotoCocina">Foto Cocina:</label>
-            <input type="file" id="fotoCocina" name="fotoCocina" accept="image/*" required>
-        </div>
         <div class="button-group">
-            <button type="submit">Guardar Inmueble</button>
+            <button type="button" id="guardar-btn">Guardar Inmueble</button>
             <button class="back-btn" type="button" onclick="location.href='/propietario'">Volver</button>
         </div>
     </form>
 </div>
+<script>
+    document.getElementById('guardar-btn').addEventListener('click', function() {
+        var form = document.getElementById('agregar-inmueble-form');
+        var formData = new FormData(form);
+
+        fetch('/propietario/agregarInmueble', {
+            method: 'POST',
+            body: formData
+        })
+            .then(response => {
+                if (response.ok) {
+                    alert('Exitoso');
+                    window.location.href = '/propietario';
+                } else {
+                    alert('Error al guardar el inmueble');
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('Error al guardar el inmueble');
+            });
+    });
+</script>
 </body>
 </html>
