--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
 
                 <div class="inputBox">
 
-                        <input type="text" id="correo" name="correo" th:field="*{correo}" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Ingrese un correo electrónico válido"> <i>Correo</i>
+                        <input type="text" id="correo" name="correo" th:field="*{correo}" required> <i>Correo</i>
 
                     </div>
 
