--- a/src/main/resources/templates/registrarse.html
+++ b/src/main/resources/templates/registrarse.html
@@ -57,12 +57,9 @@
                 </div>
             </form>
         </div>
-        <br>
-        <br>
-        <a href="/" class="btn">Volver</a>
+        <button class="back-btn" type="button" onclick="location.href='/'">Volver</button>
     </div>
 </div>
-</body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
     $(document).ready(function() {
@@ -90,4 +87,5 @@
         });
     });
 </script>
+</body>
 </html>
