Cambios de mojras y nuevas funcionalidades

--- a/src/main/resources/templates/agregarInmueble.html
+++ b/src/main/resources/templates/agregarInmueble.html
@@ -22,6 +22,14 @@
             <input type="number" id="avaluo" name="avaluo" required>
         </div>
         <div class="form-group">
+            <label for="habitaciones">Cantidad de habitaciones:</label>
+            <input type="number" id="habitaciones" name="habitaciones" required>
+        </div>
+        <div class="form-group">
+            <label for="banios">Cantidad de baños:</label>
+            <input type="number" id="banios" name="banios" required>
+        </div>
+        <div class="form-group">
             <label for="direccion">Dirección:</label>
             <input type="text" id="direccion" name="direccion" required>
         </div>
