--- a/src/main/resources/templates/registrarse.html
+++ b/src/main/resources/templates/registrarse.html
@@ -81,7 +81,7 @@
                 },
                 error: function(err) {
                     console.error('Error al enviar la solicitud:', err);
-                    alert('Ocurrió un error al registrarse. Por favor, inténtalo de nuevo más tarde.');
+                    alert('Verifique los campos del formulario e intente nuevamente.');
                 }
             });
         });
